--- a/RESPONSIVE NAVBAR/fourth.html
+++ b/RESPONSIVE NAVBAR/fourth.html
@@ -37,7 +37,8 @@
                 <li>Products</li>
                 <li>Contacts</li>
                 <li>About</li>
-            </ul>
+                <li>About Us</li>
+           </ul>
         </div>
     </div>
 </body>
